added a filter modal to filter by expense categories without apply and clear filter button impl
